woost/views/resources/styles/backoffice.css
/* ... */
.BackOfficeLayout .toolbar_box {
    height: 2.2em;
}

.BackOfficeLayout .toolbar {    
    height: 1.8em;
    padding: 0.2em 0.6em;
}

.BackOfficeLayout .toolbar_box .toolbar {
    float: left;
    margin: 0;
    border: none;
    background-color: transparent;
    height: auto;
    padding: 0.2em;
}

.BackOfficeLayout .toolbar .action_button,
.BackOfficeLayout .toolbar .additional_actions_selector {
    float: left;
	font-size: 85%;
    margin: 0;
    margin-top: 0.1em;
    padding: 0;
}

.BackOfficeLayout .toolbar * + .action_button,
.BackOfficeLayout .toolbar * + .additional_actions_selector {
    margin-left: 1.5em;
}

.BackOfficeLayout .toolbar .DropdownPanel + .action_button,
.BackOfficeLayout .toolbar .DropdownPanel + .additional_actions_selector {
    margin-left: 0.7em;
}

.BackOfficeLayout .toolbar .additional_actions_selector .action_button {
    margin-left: 0 !important;
}

.BackOfficeLayout .toolbar a {
    text-decoration: none;
}

.BackOfficeLayout .toolbar a.action_button {
    padding: 0.25em 0;
    color: black;
}

.BackOfficeLayout .toolbar .action_button .label,
.BackOfficeLayout .toolbar .additional_actions_selector .label {
    display: block;
    height: 1.8em;
    padding-top: 0.2em;
}

.BackOfficeLayout .toolbar .action_button.DropdownPanel .label {
    display: inline;
}

.BackOfficeLayout .toolbar button.action_button {
    border: none;
    background: none;
    padding-top: 0.2em;
    cursor: pointer;
    color: black;
}

.BackOfficeLayout .toolbar .action_button img {
	vertical-align: middle;
    margin-right: 0.3em;
}

.BackOfficeLayout .toolbar .new_toolbar_button {
    font-size: 100%;
}

.BackOfficeLayout .toolbar .new_toolbar_button > .button > .label {
    font-size: 85%;
}

.BackOfficeLayout .toolbar .additional_actions_selector .selector_content {
    width: 16em;
}

.BackOfficeLayout .toolbar .additional_actions_selector .selector_content .action_button {
    display: block;
    float: none;
    font-size: 100%;
    margin-bottom: 0.1em;
}

.BackOfficeLayout .action_button[disabled] {
    opacity: 0.3;
}

.BackOfficeLayout .selector_content label {
    display: inline;
}

/* Collection settings
-----------------------------------------------------------------------------*/
.BackOfficeLayout .CollectionView .collection_settings {
    white-space: nowrap;
}

.BackOfficeLayout .CollectionView .collection_settings > * {
    display: inline-block;
    vertical-align: middle;
}

.BackOfficeLayout .CollectionView .collection_settings > * + * {
    margin-left: 1.5em !important;
}

.BackOfficeLayout .CollectionView .collection_settings .DropdownPanel > .button > .label {
    font-size: 1em;
    vertical-align: middle;
    height: 18px;
}

.BackOfficeLayout .CollectionView .collection_settings .DropdownPanel .panel {
    text-align: left;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.BackOfficeLayout .DropdownPanel .panel .SearchableCheckList .search_controls {
    margin-bottom: 0.5em;
}

.BackOfficeLayout .DropdownPanel .panel .SearchableCheckList .search_box {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
}

.BackOfficeLayout .DropdownPanel .panel .SearchableCheckList .check_list label {
    font-size: 0.8em;
}

.BackOfficeLayout .CollectionView .collection_settings .members_dropdown .check_list .group_label {
    font-size: 0.8em;
    color: #555;
    border-bottom: 1px dotted #ccc;
    padding-bottom: 0.2em;
    margin-bottom: 0.2em;
}

.BackOfficeLayout .CollectionView .collection_settings .members_dropdown .check_list .group:first-child .group_label {
    display: none;
}

.BackOfficeLayout .DropdownPanel .panel .box_buttons {
    margin-top: 0.5em;
}

.BackOfficeLayout .DropdownPanel .panel .box_buttons button {
    margin: 0;
}

.BackOfficeLayout .CollectionView .collection_display_container {
    clear: both;
    position: relative;
    overflow: visible;
    min-width: 100%;
    display: inline-block;
}

/* Content type selector
-----------------------------------------------------------------------------*/
.BackOfficeLayout .content_type_selector > .button > .label {
    font-size: 85%;
}

/* Content view dropdown
-----------------------------------------------------------------------------*/
.BackOfficeLayout .collection_settings .content_view_list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.BackOfficeLayout .collection_settings .content_view_entry {
    display: block;
    padding: 0.3em 0;
}

.BackOfficeLayout .collection_settings .content_view_entry a {
    font-size: 0.8em;
    text-decoration: none;
    color: #333;
}

.BackOfficeLayout .collection_settings .content_view_entry.selected a {
    font-weight: bold;
}

/* Dropdown selector
-----------------------------------------------------------------------------*/
.BackOfficeLayout .selector {
    position: relative;
    overflow: visible;
    cursor: default;
}

.BackOfficeLayout .selector > .label {
    position: relative;
    padding-left: 0.2em;
    padding-right: 1em;
    background: url(/resources/images/dropdown_arrow.png) no-repeat right 0.7em;
    border: 1px solid transparent;
    z-index: 2;
    cursor: pointer;
    color: black;
}

.BackOfficeLayout .selector:hover > .label,
body.scripted .BackOfficeLayout .selector.unfolded > .label,
body.scripted .BackOfficeLayout .selector.unfolded:hover > .label {
    background-color: rgb(250,250,250);
    border: 1px solid rgb(190,200,210);
    border-bottom-color: rgb(250,250,250);
    z-index: 1001;
}

body.scripted .BackOfficeLayout .selector:hover > .label {
    border-color: transparent;
    background-color: transparent;
}
/* ... */

